# maos-a-obra

./: .gitignore  README.md  docker-compose.yml
api/: .gitignore  Dockerfile.dev  eslint.config.mjs  package.json  pnpm-lock.yaml
api/config/: configuration.ts
api/prisma/: schema.prisma
api/src/: app.module.ts  main.ts
api/src/auth/: auth.controller.ts  auth.module.spec.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  cliente-owner.guard.ts  create-user.guard.ts  id-param-self.guard.ts  jwt.strategy.ts  projeto-owner.guard.ts  roles.decorator.ts  roles.guard.ts
api/src/bairros/: bairros.controller.spec.ts  bairros.controller.ts  bairros.module.ts  bairros.service.spec.ts  bairros.service.ts
api/src/base-dtos/: base-response.dto.ts  base-search.dto.ts
api/src/cache/: cache.module.ts
api/src/clientes/: clientes.controller.spec.ts  clientes.controller.ts  clientes.module.ts  clientes.service.spec.ts  clientes.service.ts
api/src/constants/: defaultOrderByKeys.ts
api/src/database/: bairros.sql  estados.sql  municipios.sql  seed.ts
api/src/enderecos/: enderecos.controller.spec.ts  enderecos.controller.ts  enderecos.module.ts  enderecos.service.spec.ts  enderecos.service.ts
api/src/estados/: estados.controller.spec.ts  estados.controller.ts  estados.module.ts  estados.service.spec.ts  estados.service.ts
api/test/: app.e2e-spec.ts  jest-e2e.json
docs/: backlog.md  backup-schema.prisma  declaracao_visao.md  mao-insomnia.json
infra/: Dockerfile  main.py  pyproject.toml
web/: README.md  app.json  package.json  pnpm-lock.yaml
(+96 files in other folders)
